--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>{{ page.title }}</title>
+    <title>{{ Astra }}</title>
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   </head>
   <body>
@@ -20,3 +20,4 @@
     </footer>
   </body>
 </html>
+theme: jekyll-theme-architect
